Add new block items: pink_garnet_block, raw_pink_garnet_block

--- a/src/main/resources/assets/practicemod/lang/en_us.json
+++ b/src/main/resources/assets/practicemod/lang/en_us.json
@@ -1,4 +1,7 @@
 {
   "item.practicemod.pink_garnet": "Pink Garnet",
-  "item.practicemod.raw_pink_garnet": "Raw Pink Garnet"
+  "item.practicemod.raw_pink_garnet": "Raw Pink Garnet",
+
+  "block.practicemod.pink_garnet_block": "Block of Pink Garnet",
+  "block.practicemod.raw_pink_garnet_block": "Block of Raw Pink Garnet"
 }
