--- a/src/main/resources/assets/practicemod/lang/en_us.json
+++ b/src/main/resources/assets/practicemod/lang/en_us.json
@@ -3,5 +3,8 @@
   "item.practicemod.raw_pink_garnet": "Raw Pink Garnet",
 
   "block.practicemod.pink_garnet_block": "Block of Pink Garnet",
-  "block.practicemod.raw_pink_garnet_block": "Block of Raw Pink Garnet"
+  "block.practicemod.raw_pink_garnet_block": "Block of Raw Pink Garnet",
+
+  "itemgroup.practicemod.pink_garnet_items": "Pink Garnet Items",
+  "itemgroup.practicemod.pink_garnet_blocks": "Pink Garnet Blocks"
 }
