Add new Blocks & loot_table

--- a/src/main/resources/assets/practicemod/lang/en_us.json
+++ b/src/main/resources/assets/practicemod/lang/en_us.json
@@ -4,6 +4,8 @@
 
   "block.practicemod.pink_garnet_block": "Block of Pink Garnet",
   "block.practicemod.raw_pink_garnet_block": "Block of Raw Pink Garnet",
+  "block.practicemod.pink_garnet_ore": "Pink Garnet Ore",
+  "block.practicemod.pink_garnet_deepslate_ore": "Pink Garnet Deepslate Ore",
 
   "itemgroup.practicemod.pink_garnet_items": "Pink Garnet Items",
   "itemgroup.practicemod.pink_garnet_blocks": "Pink Garnet Blocks"
